fixed overfow issue ion firefox

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -10,6 +10,7 @@ body {
     overflow: hidden;
     justify-content: center;
     align-items: center;
+    overflow: auto;
 }
 
 h3 {
